--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "elixir-json-schema-validator",
+  "name": "elixir-jsonschema-validator",
   "version": "1.0.0",
-  "description": "Custom JSON-Schema keywords for Ajv validator",
+  "description": "Custom JSON-Schema keywords for Ajv validator and validation service with API",
   "main": "index.js",
-  "repository": "https://github.com/elixir-europe/elixir-ajv-keywords.git",
+  "repository": "https://github.com/elixir-europe/json-schema-validator.git",
   "scripts": {
     "start": "node src/server.js",
     "test": "jest",
@@ -31,7 +31,6 @@
     "express-validator": "^5.2.0",
     "npid": "^0.4.0",
     "path": "^0.12.7",
-    "pug": "^2.0.3",
     "rambda": "^1.2.0",
     "request": "^2.83.0",
     "request-defaults": "^1.2.0",
