--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elixir-jsonschema-validator",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "Custom JSON-Schema keywords for Ajv validator and validation service with API",
   "main": "index.js",
   "repository": "https://github.com/elixir-europe/json-schema-validator.git",
@@ -29,6 +29,7 @@
     "dnscache": "^1.0.1",
     "express": "^4.16.2",
     "express-validator": "^5.2.0",
+    "fs": "0.0.1-security",
     "npid": "^0.4.0",
     "path": "^0.12.7",
     "rambda": "^1.2.0",
