--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "repository": "https://github.com/elixir-europe/json-schema-validator.git",
   "scripts": {
+    "build": "tsc --skipLibCheck",
     "start": "node src/server.js",
     "test": "jest -i",
     "test-watch": "nodemon --exec \"npm test\"",
-    "travis-test": "jest test/elixir-validator.test.js"
+    "travis-test": "jest test/elixir-validator.spec.js"
   },
   "engines": {
     "node": "10.16.3"
@@ -27,6 +28,7 @@
     "amqplib": "^0.5.5",
     "bluebird": "^3.5.1",
     "dnscache": "^1.0.2",
+    "event-stream": "=3.3.4",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
     "fs": "0.0.1-security",
@@ -37,15 +39,22 @@
     "request": "^2.83.0",
     "request-defaults": "^1.2.0",
     "request-promise": "^4.2.4",
+    "set-value": "^v3.0.1",
     "winston": "^3.0.0-rc6",
     "winston-daily-rotate-file": "^3.2.1",
-    "yargs": "^11.0.0",
-    "event-stream": "=3.3.4",
-    "set-value": "^v3.0.1"
+    "yargs": "^11.0.0"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.28",
+    "@types/express": "^4.17.2",
+    "@types/jest": "^24.0.22",
+    "@types/node": "^12.12.7",
+    "@types/request-promise": "^4.1.44",
+    "@types/winston": "^2.4.4",
     "jest": "24.9.0",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.6",
+    "ts-jest": "^24.1.0",
+    "typescript": "^3.7.2"
   },
   "jest": {
     "verbose": true,
